apps/krakend/service.yaml
# infra-repo/argocd-apps/krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
  namespace: krakend
spec:
  selector:
    app: krakend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80 # External port
      targetPort: 8080 # Port on the Krakend container
      nodePort: 30000
